k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: book-app
  labels:
    name: book-api
