k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-api-deployment
  namespace: book-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: book-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: book-api
    spec:
      containers:
        - name: book-api
          image: abhishekjsh03/books-api:1.0
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/books
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/books
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "256Mi"
              cpu: "200m"
