k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-api-service
  namespace: book-app
spec:
  type: NodePort
  selector:
    app: book-api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
