k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-db-service
  namespace: book-app
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
